--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
         "@inertiajs/react": "^2.3.7",
+        "@mui/icons-material": "^7.3.8",
+        "@mui/material": "^7.3.8",
         "@tailwindcss/vite": "^4.1.18",
         "@types/react": "^19.2.0",
         "@types/react-dom": "^19.2.0",
