--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@inertiajs/react": "^2.3.7",
         "@mui/icons-material": "^7.3.8",
         "@mui/material": "^7.3.8",
+        "@mui/x-charts": "^7.3.8",
         "@tailwindcss/vite": "^4.1.18",
         "@types/react": "^19.2.0",
         "@types/react-dom": "^19.2.0",
