--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,20 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
+      - /var/www/node_modules
     ports:
       - "8000:8000"
     depends_on:
       - db
+    environment:
+      APP_ENV: local
+      APP_KEY: ${APP_KEY}
+      DB_CONNECTION: mysql
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_DATABASE: cpms
+      DB_USERNAME: cpms
+      DB_PASSWORD: root
     networks:
       - cpms
 
